<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#d1cece"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/colorWhite"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/one"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:paddingTop="20dp"
        android:textColor="#000000"
        android:text="@string/two"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/three"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:paddingTop="20dp"
            android:textColor="#000000"
            android:text="@string/four"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/five"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:paddingTop="20dp"
            android:textColor="#000000"
            android:text="@string/six"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/senven"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:paddingTop="20dp"
            android:textColor="#000000"
            android:text="@string/eight"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/nine"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:paddingTop="20dp"
            android:textColor="#000000"
            android:text="@string/ten"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>